--- a/src/modules/quan-ly-nhan-vien/dialogs/luu-nhan-vien.html
+++ b/src/modules/quan-ly-nhan-vien/dialogs/luu-nhan-vien.html
@@ -1,15 +1,14 @@
 <template>
   <style>
-    ai-dialog-overlay.active {
+    ux-dialog-overlay.active {
       background-color: black;
       opacity: .5;
     }
 
   </style>
-  <ai-dialog>
-    <ai-dialog-header>
-    </ai-dialog-header>
-    <ai-dialog-body>
+  <ux-dialog>
+
+    <ux-dialog-body>
       <h2>${getTieuDe}</h2>
       <form submit.delegate="save()">
         <div class="form-group">
@@ -28,6 +27,6 @@
         <button class="btn btn-primary" type="submit">Lưu</button>
         <button class="btn btn-warning" click.trigger="dialogcontroller.cancel()">Hủy</button>
       </form>
-    </ai-dialog-body>
-  </ai-dialog>
+    </ux-dialog-body>
+  </ux-dialog>
 </template>
