--- a/src/modules/quan-ly-nhan-vien/danh-sach-nhan-vien.html
+++ b/src/modules/quan-ly-nhan-vien/danh-sach-nhan-vien.html
@@ -18,7 +18,7 @@
   </div>
   <hr>
   <div style="width: 100%; height: 450px;">
-    <ag-grid-aurelia #agGrid grid-options.bind="gridOptions" column-defs.bind="columnDefs" grid-ready.call="onReady()" row-clicked.call="onRowClicked($event)"
+    <ag-grid-aurelia #agGrid grid-options.bind="gridOptions"  grid-ready.call="onReady()" row-clicked.call="onRowClicked($event)"
       row-double-clicked.call="onRowDoubleClicked($event)" row-selected.call="onRowSelected($event)">
 
     </ag-grid-aurelia>
