--- a/src/modules/quan-ly-doi-tac/danh-sach-doi-tac.html
+++ b/src/modules/quan-ly-doi-tac/danh-sach-doi-tac.html
@@ -48,7 +48,7 @@
   <hr>
   <div style="width: 100%; height: 450px;">
     <ag-grid-aurelia #agGrid grid-options.bind="gridOptions" grid-ready.call="onReady()" row-clicked.call="onRowClicked($event)"
-      row-double-clicked.call="onRowDoubleClicked($event)" row-selected.call="onRowSelected($event)">
+      row-double-clicked.call="onRowDoubleClicked($event)" row-selected.call="onRowSelected($event)" row-cell-focused.call="cellFocused($event)">
 
     </ag-grid-aurelia>
   </div>
