chore(*): cap nhat dashboard

--- a/src/modules/dashboard/index.html
+++ b/src/modules/dashboard/index.html
@@ -29,13 +29,15 @@
         </div>
       </div>
 
+      <button btn-async task.bind="doClick" class="btn btn-primary">ok</button>
+
     </div>
-  <!--<select name="" id="" select2 class="form-control">
+    <!--<select name="" id="" select2 class="form-control">
     <option value="1">1</option>
   </select>
   ${vl}
   <input type="text" datetime-picker class="form-control" value.bind="vl" >
   </div>-->
-  <!-- END PAGE CONTENT -->
+    <!-- END PAGE CONTENT -->
 
 </template>
