--- a/src/modules/dashboard/index.html
+++ b/src/modules/dashboard/index.html
@@ -28,8 +28,9 @@
           <span class="text-muted">Something else</span>
         </div>
       </div>
-
-      <button btn-async task.bind="doClick" class="btn btn-primary">ok</button>
+      <input type="text" value.bind="person.fn"><input value.bind="person.ln"> ${person}
+      <button data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Loading" btn-async="task.call:doClick()" class="btn btn-primary">Click Me</button>
+      <button class="btn btn-primary" disabled.bind="isDisable">ok</button>
 
     </div>
     <!--<select name="" id="" select2 class="form-control">
