feat(*): add example

--- a/src/modules/dashboard/index.html
+++ b/src/modules/dashboard/index.html
@@ -20,7 +20,10 @@
       <button data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i> Loading" btn-async="task.call:doClick()" class="btn btn-primary">Click Me</button>
       
       <hr>
-
+      <h3>jstree</h3>
+      Xem document <a href="https://www.jstree.com/"> jstree</a>
+      
+      <div id="data"></div>
     </div>
     <!--<select name="" id="" select2 class="form-control">
     <option value="1">1</option>
