--- a/src/modules/quan-ly-quyen/danh-sach-quyen.html
+++ b/src/modules/quan-ly-quyen/danh-sach-quyen.html
@@ -81,7 +81,7 @@
     }
     .container-tree {
       border: 1px solid #e3e3e3;
-      height: 500px;
+      
       margin: 0px 14px;
       border-radius: 11px;
       padding: 0 24px;
@@ -139,9 +139,9 @@
                 <div class="form-group">
                   <label>Ngày tạo</label>
                   <div class="input-daterange input-group settingWidth" id="datepicker-range">
-                    <input type="text" class="input-sm form-control" name="start" />
+                    <input type="text" class="input-sm form-control" name="start" value.bind="filterModel.DateFrom"  datepicker/>
                     <span class="input-group-addon">đến</span>
-                    <input type="text" class="input-sm form-control" name="end" />
+                    <input type="text" class="input-sm form-control" name="end" value.bind="filterModel.DateTo" datepicker/>
                   </div>
                 </div>
               </div>
@@ -194,7 +194,7 @@
               <div class="col-md-8">
                 <div class="form-group">
                   <label>Tên nhóm quyền</label>
-                  <input type="text" class="input-sm form-control" name="start" />
+                  <input id="jstree-tree-search" type="text" class="form-control" placeholder="search">
                 </div>
               </div>
               <!--End Name Group Roles-->
@@ -214,9 +214,8 @@
           <div class="row">
             <div class="container-tree">
               <h5>DANH SÁCH QUYỀN</h5>
-              <div class="hrRole">
-
-              </div>
+              <div class="hrRole"></div>
+               <div id="jstree-tree"></div>
 
             </div>
             <!--End tree-->
