UserDlg,SignUpUserDlg bổ sung thêm type file

--- a/src/modules/quan-ly-quyen/danh-sach-quyen.html
+++ b/src/modules/quan-ly-quyen/danh-sach-quyen.html
@@ -97,6 +97,9 @@
          padding: 16px;
          width: 100%;
    }
+   .jstree-default .jstree-clicked{
+         background: none;
+   } 
   </style>
   <div class="row">
     <div class='col-md-10'></div>
