--- a/src/modules/quan-ly-banner/danh-sach-banner.html
+++ b/src/modules/quan-ly-banner/danh-sach-banner.html
@@ -16,7 +16,7 @@
                   <div class="form-group">
                     <label>Img</label>
                     <span class="help">e.g. </span>
-                    <input type="email" class="form-control input-sm" value.bind="filter.where.Img">
+                    <input type="text" class="form-control input-sm" value.bind="filter.where.img">
                   </div>
                   <div class="form-group long">
                     <label>THEO NGÀY</label>
