feat(*): add task async

--- a/src/modules/quan-ly-banner/danh-sach-banner.html
+++ b/src/modules/quan-ly-banner/danh-sach-banner.html
@@ -35,7 +35,7 @@
             </div>
             <div class="table-responsive">
               <table class="table table-hover" aurelia-table="data.bind: entityList; display-data.bind: $displayData; 
-                                page-size.bind: pageSize; current-page.bind: currentPage;">
+                                page-size.bind: pageSize; current-page.bind: currentPage; waiting.bind: currentTask">
                 <thead>
                   <tr>
                     <th>Img</th>
