feat(*): impl filter server

--- a/src/modules/quan-ly-banner/danh-sach-banner.html
+++ b/src/modules/quan-ly-banner/danh-sach-banner.html
@@ -1,63 +1,4 @@
 <template>
-  <style>
-    .waiting {
-      background: red
-    }
-
-    .loaders-container {
-      position: relative;
-    }
-
-    .loaders {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 2;
-      background: rgba(255, 255, 255, 0.9);
-    }
-
-    .loader {
-      display: inline-block;
-      position: relative;
-      width: 50px;
-      height: 50px;
-      vertical-align: middle;
-    }
-
-    .loader-quart {
-      border-radius: 50px;
-      border: 3px solid rgba(0, 0, 0, 0.3);
-    }
-
-    .loader-quart:after {
-      content: '';
-      position: absolute;
-      top: -3px;
-      right: -3px;
-      bottom: -3px;
-      left: -3px;
-      border-radius: 50px;
-      border: 3px solid transparent;
-      border-top-color: rgba(0, 0, 0, 0.5);
-      -webkit-animation: spin 1s linear infinite;
-      animation: spin 1s linear infinite;
-    }
-
-    @keyframes spin {
-      0% {
-        -webkit-transform: rotate(0deg);
-        tranform: rotate(0deg);
-      }
-      100% {
-        -webkit-transform: rotate(360deg);
-        tranform: rotate(360deg);
-      }
-    }
-
-  </style>
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
@@ -70,7 +11,7 @@
         <div class="panel-body">
           <div class="row">
             <div class="col-sm-8">
-              <form role="form" lpformnum="2" class="form-filter" submit.delegate="runFilter()">
+              <form role="form" lpformnum="2" class="form-filter">
                 <div class="form-group">
                   <label>Img</label>
                   <span class="help">e.g. </span>
@@ -90,15 +31,14 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <button class="btn btn-primary btn-cons btn-sm m-t-25" type="submit"><i class="fa fa-search"></i> Tìm kiếm</button>
+                  <button data-loading-text="Loading" btn-async="task.call:runFilter()" class="btn btn-primary btn-cons btn-sm m-t-25" type="submit"><i class="fa fa-search"></i> Tìm kiếm</button>
                 </div>
               </form>
             </div>
 
             <div class="col-sm-12">
-              <loader async-task.bind="tableAsyncTask">
-                <table class="table table-hover" aurelia-table="data.bind: entityList; display-data.bind: $displayData; 
-                                page-size.bind: pageSize; current-page.bind: currentPage;">
+              <loader async-task.bind="asyncTask">
+                <table class="table table-hover" aurelia-table="data.bind: entityList; display-data.bind: $displayData;">
                   <thead>
                     <tr>
                       <th>Img</th>
@@ -114,43 +54,38 @@
                       <td>${item.Position}</td>
                       <td class="v-align-middle">
                         <div class="btn-group sm-m-t-10">
-                          <button type="button" class="btn btn-default btn-sm text-primary"><i class="fa fa-edit"></i> Chỉnh sữa</button>
+                          <button type="button" class="btn btn-default btn-sm text-primary"><i class="fa fa-edit"></i> Chỉnh sửa</button>
                           <button type="button" class="btn btn-default btn-sm text-danger"><i class="fa fa-trash-o"></i> Xóa</button>
                         </div>
                       </td>
                     </tr>
                   </tbody>
                 </table>
-              </loader>
+                <div class="row">
+                  <div class="col-md-8">
+                    <aut-pagination filter-ref.bind="filter" changed.delegate="currentPageChanged($event)" current-page.bind="currentPage" page-size.bind="pageSize"
+                      total-items.bind="entitiesCount" pagination-size.bind="5">
+                    </aut-pagination>
+                  </div>
 
-
-
-            </div>
-
-          </div>
-
-
-
-          <div class="row">
-            <div class="col-md-8">
-              <aut-pagination current-page.bind="currentPage" page-size.bind="pageSize" total-items.bind="entitiesCount" pagination-size.bind="5">
-              </aut-pagination>
-            </div>
-
-            <div class="col-md-2">
-              <div class="form-inline">
-                <div class="form-group pull-right">
-                  <label for="pageSize">Page Size: </label>
-                  <select value.bind="pageSize" id="pageSize" class="form-control">
+                  <div class="col-md-4">
+                    <div class="form-inline">
+                      <div class="form-group pull-right">
+                        <label for="pageSize">Page Size: </label>
+                        <select value.bind="pageSize" id="pageSize" class="form-control">
                         <option model.bind="5">5</option>
                         <option model.bind="10">10</option>
                         <option model.bind="20">20</option>
                         <option model.bind="50">50</option>
                     </select>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-              </div>
+              </loader>
             </div>
           </div>
+
         </div>
       </div>
     </div>
