--- a/src/resources/loader/loader.html
+++ b/src/resources/loader/loader.html
@@ -5,12 +5,13 @@
     }
 
     .loaders {
+      display: none;
       position: absolute;
       width: 100%;
       height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      /* display: flex; */
+      /* justify-content: center; */
+      /* align-items: center; */
       z-index: 2000;
       background: rgba(255, 255, 255, 0.9);
     }
@@ -21,6 +22,11 @@
       width: 50px;
       height: 50px;
       vertical-align: middle;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      margin-left: -25px;
+      margin-top: -25px;
     }
 
     .loader-quart {
@@ -55,10 +61,7 @@
 
   </style>
   <div class="loaders-container">
-    <div if.bind="loading">
-      <div class="loaders"><span class="loader loader-quart"> </span></div>
-    </div>
-
+    <div id="loader" class="loaders"><span class="loader loader-quart"> </span></div>
     <slot></slot>
   </div>
 </template>
