--- a/src/resources/loader/loader.html
+++ b/src/resources/loader/loader.html
@@ -61,7 +61,7 @@
 
   </style>
   <div class="loaders-container">
-    <div id="loader" class="loaders"><span class="loader loader-quart"> </span></div>
+    <div class="loaders"><span class="loader loader-quart"> </span></div>
     <slot></slot>
   </div>
 </template>
